# vida-com-deus-IA

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js  vida-com-deus-IA.md
.cursor/: index.mdc
back-end/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
back-end/app/: main.py
back-end/app/api/: router.py
back-end/app/api/v1/: admin.py  auth.py  chat.py  library.py  posts.py  therapist.py  users.py
back-end/app/core/: config.py  database.py  dependencies.py  scraper.py  security.py  storage.py
back-end/app/domain/admin/: schemas.py
back-end/app/domain/auth/: schemas.py
back-end/app/domain/chat/: schemas.py
back-end/app/domain/posts/: schemas.py
back-end/app/domain/therapist/: schemas.py
back-end/app/domain/users/: schemas.py
back-end/app/models/: base.py  chat.py  library.py  post.py  user.py
back-end/app/repositories/: chat_repository.py  library_repository.py  post_repository.py  user_repository.py
back-end/app/services/: auth_service.py  chat_service.py  library_service.py  post_service.py  user_service.py
back-end/data/: etl_runs.json  favorites.json  patients.json  posts.json  users.json
back-end/docs/: decisoes-fase2.md  testes.md
back-end/migrations/: env.py
back-end/migrations/versions/: a1b2c3d4e5f6_cria_tabela_storage_snapshots.py  c3d4e5f6a7b8_converte_datas_posts_para_iso.py  d98403ced0d7_cria_tabelas_de_posts_e_tags.py  dc263afe3007_cria_tabelas_de_biblioteca_chat_e_.py  df122fb2dd78_cria_tabelas_de_usuarios_e_autenticacao.py
back-end/tests/contract/: test_endpoints.py
(+90 files in other folders)
